fix spacing

--- a/_sass/_modal.scss
+++ b/_sass/_modal.scss
@@ -64,7 +64,7 @@
     }
 
     .modalDialog > div {
-        width: 60%;
+        width: 50%;
         position: relative;
         margin: 4% auto;
         padding: 40px;
